--- a/css/style.css
+++ b/css/style.css
@@ -54,12 +54,10 @@ footer img {
 }
 
 footer {
-  /* padding-top: 20px; */
-  height: 100px;
+  padding-top: 20px;
   bottom: 0;
-  position: absolute;
-  background-color: red;
 }
+
 p {
   font-size: 14px;
   color: #444;
@@ -70,14 +68,12 @@ p {
   display: flex;
   min-height: 70vh;
   max-height: 70vh;
-  /* margin-bottom: 25px; */
 }
 
 .page {
   flex: 1;
   padding: 20px;
   overflow-x: hidden;
-
 }
 
 .sidebar {
@@ -86,6 +82,4 @@ p {
   padding-left: 10px;
   padding-top: 20px;
   overflow-x: hidden;
-  
-
 }
