--- a/css/style.css
+++ b/css/style.css
@@ -8,21 +8,38 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
-  background: rgb(255, 218, 0);
+  --primary-bg-color: #116466;
+  --secondary-bg-color: #2c3531;
+  --primary-color: #d9b08c;
+  --secondary-color: #ffcb9a;
+  --text-color: #d1e8e2;
+  background: var(--primary-bg-color);
   background: radial-gradient(
     circle,
-    rgba(255, 218, 0, 1) 0%,
-    rgba(255, 196, 54, 1) 100%
+    var(--primary-bg-color),
+    var(--secondary-bg-color)
   );
-  /* background-color: #313131; */
-  color: #fff;
+  color: var(--text-color);
   min-height: 100vh;
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: var(--text-color);
+  border: 4px solid var(--primary-bg-color);
+  border-radius: 10px;
+}
+
+body::-webkit-scrollbar-track {
+  background: var(--primary-bg-color);
+}
+
+body::-webkit-scrollbar {
+  width: 12px;
 }
 
 .wrapper {
   margin: auto;
   max-width: 980px;
-  /* min-height: 100vh; */
   display: flex;
   flex-direction: column;
   overflow-y: hidden;
@@ -31,36 +48,63 @@ body {
 header {
   display: flex;
   flex-direction: column;
-  padding: 25px 0;
-  border-bottom: 2px solid #444;
+  padding: 15px 0;
+  border-bottom: 1px solid rgba(209, 232, 226, 0.2);
   justify-content: center;
   align-items: center;
 }
 
-.logos {
+nav {
+  margin-top: 20px;
+}
+
+nav ul {
   display: flex;
-  justify-content: space-evenly;
-  align-items: center;
+  list-style: none;
+  gap: 20px;
+}
+
+nav li {
+  background-color: var(--secondary-bg-color);
+  border-radius: 5px;
+  padding: 5px 13px 8px 13px;
+  color: var(--text-color);
+  box-shadow: 0px 0px 2px 2px var(--primary-bg-color);
+  cursor: pointer;
+}
+
+nav li:hover {
+  background-color: var(--primary-bg-color);
+  transition: 0.3s;
+  text-shadow: 1px 1px 2px var(--secondary-bg-color);
+  box-shadow: 0px 0px 1px 1px var(--text-color);
 }
 
 h1 {
   margin: 0;
   padding: 0;
-  font-size: 28px;
-}
-footer img {
-  width: 20%;
-  color: #000;
-}
-
-footer {
-  padding-top: 20px;
-  bottom: 0;
+  font-size: 40px;
+  color: var(--primary-color);
 }
 
 p {
   font-size: 14px;
-  color: #444;
+  color: var(--text-color);
+  text-indent: 50px;
+  margin-bottom: 10px;
+  text-align: justify;
+}
+
+a {
+  text-decoration: none;
+  color: var(--text-color);
+}
+
+.active {
+  background-color: var(--primary-bg-color);
+  transition: 0.3s;
+  text-shadow: 1px 1px 2px var(--secondary-bg-color);
+  box-shadow: 0px 0px 1px 1px var(--text-color);
 }
 
 .steps {
@@ -74,12 +118,86 @@ p {
   flex: 1;
   padding: 20px;
   overflow-x: hidden;
+  display: flex;
+  flex-direction: column;
+}
+
+.page ul,
+ol {
+  padding-left: 20px;
+  font-size: 14px;
+  margin-bottom: 10px;
+}
+
+.page ol ol {
+  list-style: lower-alpha;
+  margin-top: 5px;
+}
+
+.page::-webkit-scrollbar-thumb {
+  background-color: var(--text-color);
+  border: 4px solid var(--primary-bg-color);
+  border-radius: 10px;
+}
+
+.page::-webkit-scrollbar-track {
+  background: var(--primary-bg-color);
+}
+
+.page::-webkit-scrollbar {
+  width: 12px;
+}
+
+.title {
+  width: 100%;
+  margin-bottom: 20px;
+  color: var(--secondary-color);
+  text-shadow: 1px 2px 2px var(--secondary-bg-color);
+}
+
+.title h2 {
+  text-align: center;
+}
+
+.title h3 {
+  text-align: left;
+}
+
+.topicImage {
+  width: 100%;
+  margin-bottom: 30px;
+}
+
+.topicImage img {
+  object-fit: cover;
+  width: 100%;
+  height: 150px;
 }
 
 .sidebar {
   width: 250px;
-  border-left: 2px solid #444;
+  border-left: 1px solid rgba(209, 232, 226, 0.2);
   padding-left: 10px;
   padding-top: 20px;
   overflow-x: hidden;
+}
+
+.sidebar ul {
+  padding-left: 20px;
+}
+
+footer {
+  padding-top: 20px;
+  bottom: 0;
+}
+
+.logos {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+footer img {
+  width: 20%;
+  color: #000;
 }
