--- a/css/style.css
+++ b/css/style.css
@@ -174,6 +174,17 @@ ol {
   height: 150px;
 }
 
+.sidebar .topicImage {
+  width: 100%;
+  margin-bottom: 15px;
+}
+
+.sidebar .topicImage img {
+  object-fit: cover;
+  width: 100%;
+  height: 80px;
+}
+
 .sidebar {
   width: 250px;
   border-left: 1px solid rgba(209, 232, 226, 0.2);
@@ -186,7 +197,7 @@ ol {
   padding-left: 20px;
   position: relative;
   list-style: none;
-  line-height: 35px;
+  line-height: 30px;
   margin-bottom: 20px;
 }
 
@@ -227,6 +238,10 @@ li svg {
   color: #64ffda;
   transform: translateY(-5px);
   transition: all 0.25s cubic-bezier(0.645, 0.045, 0.355, 1);
+}
+
+a:hover {
+  color: #64ffda;
 }
 
 footer {
