--- a/css/style.css
+++ b/css/style.css
@@ -163,6 +163,39 @@ ol {
   text-align: left;
 }
 
+.title h4 {
+  margin-top: 10px;
+  text-align: left;
+  color: var(--text-color);
+  font-weight: 700;
+  text-shadow: none;
+}
+
+.title p {
+  text-shadow: none;
+  text-indent: 0px;
+  font-style: italic;
+}
+
+.title svg {
+  width: 100px;
+  top: 2px;
+  position: relative;
+}
+
+.news {
+  margin-bottom: 30px;
+  display: flex;
+  flex-direction: column;
+}
+
+.info_news {
+  display: flex;
+  gap: 20px;
+  margin-top: 5px;
+  justify-content: center;
+}
+
 .topicImage {
   width: 100%;
   margin-bottom: 30px;
