--- a/css/style.css
+++ b/css/style.css
@@ -371,3 +371,29 @@ footer img {
     padding-top: 5px;
   }
 }
+
+@media (max-width: 790px) {
+  nav ul {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    padding: 0 10px;
+  }
+
+  header h1 {
+    text-align: center;
+    font-size: 2rem;
+  }
+
+  .page {
+    max-height: 50vh;
+  }
+
+  .sidebar {
+    width: auto;
+  }
+
+  .steps {
+    flex-direction: column;
+  }
+}
